# api-schema-public

./: .gitignore  README.md  go.mod  go.sum  pyproject.toml
proto/helloworld/v1/: hello_world.proto
proto/kentik/ai_advisor/v202511/: ai_advisor.proto
proto/kentik/as_group/v202212/: as_group.proto
proto/kentik/audit/v202205beta1/: audit.proto
proto/kentik/audit/v202208beta1/: audit.proto
proto/kentik/audit/v202208beta2/: audit.proto
proto/kentik/bgp_monitoring/v202205beta1/: bgp_monitoring.proto
proto/kentik/bgp_monitoring/v202210/: bgp_monitoring.proto
proto/kentik/capacity_plan/v202212/: capacity_plan.proto
proto/kentik/cloud_api/v202103alpha1/: cloud_api.proto
proto/kentik/cloud_export/v202012/: cloud_export.proto
proto/kentik/cloud_export/v202012alpha1/: cloud_export.proto
proto/kentik/cloud_export/v202101beta1/: cloud_export.proto
proto/kentik/cloud_export/v202210/: cloud_export.proto
proto/kentik/cloud_export/v202506/: cloud_export.proto
proto/kentik/cloud_gw/v202103alpha1/: cloud_gw.proto
proto/kentik/cloud_maps/v202201alpha1/: cloud_maps.proto
proto/kentik/connectivity_checker/v202410beta1/: connectivity_checker.proto
proto/kentik/core/v202012/: errors.proto
proto/kentik/core/v202012alpha1/: annotations.proto  errors.proto
proto/kentik/core/v202303/: annotations.proto  timestamp.proto  user_info.proto
proto/kentik/cost/v202308/: cost.proto
proto/kentik/credential/v202407alpha1/: credential.proto
proto/kentik/custom_application/v202501alpha1/: custom_application.proto
proto/kentik/device/v202308beta1/: device.proto
(+97 files in other folders)
