[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "kentik-api-proto"
description ="Prebuilt client stubs for Kentik API"
requires-python = ">=3.8,<4"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["version"]
dependencies = [
    "protobuf>=3.20.3",
    "grpcio==1.47.0",
    "grpclib==0.4.3",
    "googleapis-common-protos==1.58.0",
    "protoc_gen_openapiv2==0.0.1",
]

[tool.setuptools.packages.find]
where = ["gen/python"]
